--- a/index.html
+++ b/index.html
@@ -102,17 +102,19 @@
         </div>
     </div>
 
-<!--
-<div class="sliderone">
-<div class="swiper-containerone swiperjsone">
-<div class="swiper-wrapperone">
-<div class="swiper-slideone" style="background-image:url(1.jpg)"></div>
-<div class="swiper-slideone" style="background-image:url(2.jpg)"></div>
-</div>
 
-<div class="swiper-pagination"></div>
-</div>
-</div>-->
+    <div class="swiper-container swipertwo">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
+          <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
+          <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
+          <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
+          <div class="swiper-slide" style="background-image:url(4.jpg)"></div>
+          <div class="swiper-slide" style="background-image:url(4.jpg)"></div>       
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+      </div>
 
 <section class="about">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, consequatur. Mollitia aspernatur excepturi saepe pariatur debitis commodi hic ipsa tempore! Exercitationem eaque sequi ex at? Laudantium necessitatibus impedit tempora accusamus reprehenderit eligendi quae, aliquam ab eos sapiente et facere repellendus quam architecto eaque adipisci odio, alias quo iusto, quia quibusdam.
@@ -124,6 +126,8 @@
         <footer>
             copyright 2019 &copy;
                 </footer>
+
+               
     <script src="swiper.js"></script>
 
 <script src="app.js"></script>
