--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="loginscreen.html">Login</a></li>
             </ul>
         </div>
     </nav>
     <div class="slider">
     <div class="swiper-container swiperjs">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="pubgmain.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="screen-1.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="pubgmain.jpg" style='width:100%;  'alt=""></div>
+              <div class="swiper-slide"><img src="screen-1.jpg"  style='width:100%; 'alt=""></div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
@@ -80,6 +80,150 @@
             <a href="" class="join">Join Now</a>
         </div>
     </div>
+
+
+  <!-- Swiper -->
+  <div class="swiper-container swiperthree">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+          <div class="swiper-slide">
+                <div class="card">
+                        <h1 class="name">
+                            PUBG
+                        </h1>
+                        <p class="content">
+                            Lorem ipsum dolor sit.
+                        </p>
+                        <img src="pubgmobile.jpg " alt="">
+                        <a href="" class="join">Join Now</a>
+                    </div>
+          </div>
+        <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+</div>
+        </div>
+      </div>
+
+
     <h3>Special Tournaments</h3>
 
     <div class="special-tournaments tournaments">
@@ -124,7 +268,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <ul id="cafe-list"></ul>
+    
   </div>
 
 </div> 
@@ -141,6 +285,10 @@
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
       </div>
+
+
+      
+
 
 <section class="about" id="about">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, consequatur. Mollitia aspernatur excepturi saepe pariatur debitis commodi hic ipsa tempore! Exercitationem eaque sequi ex at? Laudantium necessitatibus impedit tempora accusamus reprehenderit eligendi quae, aliquam ab eos sapiente et facere repellendus quam architecto eaque adipisci odio, alias quo iusto, quia quibusdam.
