--- a/loginscreen.html
+++ b/loginscreen.html
@@ -39,7 +39,7 @@
 <script type="text/javascript">
   // FirebaseUI config.
   var uiConfig = {
-    signInSuccessUrl: 'index.html',
+    signInSuccessUrl: 'logged.html',
     signInOptions: [
       // Leave the lines as is for the providers you want to offer your users.
       firebase.auth.GoogleAuthProvider.PROVIDER_ID,
